style.css
html, body {
  height : 100%;
  width: 100%;
  font-family : 'Lato', sans-serif;
  color: #222;
  overflow-x: hidden;
  overflow-y: scroll;
}
*:focus
{
  outline: 0;
}
footer{
  overflow-y: scroll;
  overflow-x: hidden;
  padding-top: 2rem;
}
.navbar {
  padding: .8rem;
  border-bottom: 1px solid #d5d5d5;
}
.navbar .navbar-nav li a{
  color: #696969!important;
}
.navbar .navbar-nav li a:hover, .navbar .navbar-nav li a.active{
  color: #3B5998 !important;
}
.colored
{
  color: #3B5998;
}
.nav-link{
  font-size: 1.15em !important;
}
.carousel-inner img{
  width: 100%;
  height: 100%;
}
.carousel-caption {
  position: absolute;
  top: 50%;
  transform:translateY(-50%);
}
.carousel-caption h1 {
  font-size : 600%;
  font-weight: 400;
  text-shadow: 1px 1px 15px #000;
}
.carousel-caption h3{
  font-size: 175%;
  font-weight: 400;
  text-shadow: 1px 1px 10px #000;
  padding-bottom: 1rem;
}
.welcome{
  width: 75%;
  margin: 0 auto;
  padding-top : 2rem;
}
.welcome hr{
  border-top: 2px solid #b4b4b4;
  width: 95%;
  margin-top: .3rem;
  margin-bottom: 1rem;
}
.fa-html5{
  color: #e34f26;
}
.fa-bold{
  color: #563d7c;
}
.fa-css3{
  color: #2163af;
}
.fa-html5, .fa-bold, .fa-css3{
  font-size: 7em;
  margin: 1rem;
}
 .fa-twitter, .fa-sign-language,.fa-user-md,.fa-lightbulb,.fa-rocket{
   font-size: 10em;
   margin: 1rem;
 }
.social a{
  font-size: 4.5em;
  padding: 3rem;
  text-decoration:none;
}
.fa-github{
  color: #000;
}
.fa-linkedin{
  color: #0077B5;
}
.fa-twitter{
  color: #1DA1F2;
}
.fa-sign-language{
  color: #000
}
.fa-user-md{
  color: #EA80B0;
}
.fa-lightbulb{
  color: #FFFA67;
}
.fa-rocket{
  color: #327140;
}
.fa-github:hover,
.fa-linkedin:hover,
.fa-twitter:hover,
.fa-sign-language:hover,
.fa-user-md:hover,
.fa-lightbulb:hover,
.fa-rocket:hover{
  color: #d5d5d5
}
.img-thumbnail{
  border: 1px solid #ddd;
  border-radius: 4px;
  padding: 5px;
  width:50%;
  height:100%;
}
.img-responsive{
  border: 1px solid #ddd;
  border-radius: 4px;
  padding:5px;
  width: 150px;
}
.intro{
  line-height: 1.75em;
  font-size: 20pt;
}
.modal-img{
  display: block;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid #ddd;
  border-radius: 4px;
  padding: 5px;
  width: 50%;
  height:100%;
}
.modal-footer{
  margin: auto;
}
@media(max-width: 992px)
{
  .social a{
    font-size: 4.25em;
    padding: 2.25rem;
  }
  .navbar-brand h2
  {
    font-size: 150%;
  }
}
@media(max-width: 768px) {
  .carousel-caption{
    top: 45%;
  }
  .carousel-caption h1{
    font-size: 350%;
  }
  .carousel-caption h3{
    font-size:140%;
  }
  .carousel-caption .btn
  {
    font-size: 95%;
    padding: 8px 14px;
  }
  .social a{
    font-size: 3.25em;
    padding: 1.5rem;
  }
  .navbar-brand h2
  {
    font-size: 100%;
  }
  .nav-link{
    font-size: 1.10em !important;
  }
}
@media (max-width: 576px)
{
  .carousel-caption{
    top: 40%;
  }
  .carousel-caption h1{
    font-size: 250%;
  }
  .carousel-caption h3{
    font-size:110%;
  }
  .carousel-caption .btn
  {
    font-size: 90%;
    padding: 4px 8px;
  }
  .social a{
    font-size: 2.75em;
    padding: 1rem;
  }
  .nav-link{
    font-size: 1.05em !important;
  }
}
@media (max-width: 400px)
{
  .carousel-caption{
    top: 35%;
  }
  .carousel-caption h1{
    font-size: 200%;
  }
  .carousel-caption h3{
    font-size:100%;
  }
  .carousel-caption .btn
  {
    font-size: 80%;
    padding: 2px 4px;
  }
  .social a{
    font-size: 2.5em;
    padding: .75rem;
  }
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}
/*-- devpost font from icomoon--*/
@font-face {
  font-family: 'icomoon';
  src:  url('img/icomoon.eot?kxim24');
  src:  url('img/icomoon.eot?kxim24#iefix') format('embedded-opentype'),
    url('img/icomoon.ttf?kxim24') format('truetype'),
    url('img/icomoon.woff?kxim24') format('woff');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-devpost_medium:before {
  content: "\e900";
}
.icon-devpost_medium
{
  color: #163E52;
}
.icon-devpost_medium:hover {
  color: #d5d5d5;
}
/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

